--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
+		"@tailwindcss/typography": "^0.5.9",
+		"autoprefixer": "^10.4.13",
+		"postcss": "^8.4.21",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
+		"tailwindcss": "^3.2.4",
 		"vite": "^4.0.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"appwrite": "^10.2.0"
+		"appwrite": "^10.2.0",
+		"daisyui": "^2.49.0"
 	}
 }
